force-app/main/default/objects/Contact_V2_External_References__c.object
<CustomObject>
    <fields>
        <fullName>CommunityUserId__c</fullName>
        <formula>$User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CommunityUserId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <label>Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact V2 External References</relationshipLabel>
        <relationshipName>Contact_V2_External_References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EducationalInstitution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EducationalInstitution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V2_External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>V2 External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contact V2 External References</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Contact V2 External References Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact V2 External References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>